# media-file-storage

./: README.md
.github/workflows/: django.yml  flake8.yml
backend-filestorage/: Pipfile  manage.py  pyproject.toml  pytest.ini
backend-filestorage/.github/workflows/: djangoci.yml
backend-filestorage/core/: middlewares.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend-filestorage/core/api/v1/: auth_api.py
backend-filestorage/core/migrations/: 0001_initial.py
backend-filestorage/core/services/: file_service.py
backend-filestorage/filestorage/: settings.py  urls.py  wsgi.py
backend-filestorage/tests/: test_api_calls.py
client-filestorage/: README.md  index.html  package-lock.json  package.json
client-filestorage/src/: App.vue  main.js
client-filestorage/src/assets/: main.css
client-filestorage/src/axios/: index.js
client-filestorage/src/components/: Header.vue  LogoutButton.vue
client-filestorage/src/components/navbar/: NavLink.vue  Navigator.vue  UploadButton.vue  state.js
client-filestorage/src/router/: index.js
client-filestorage/src/store/: index.js
client-filestorage/src/stores/: file.js  user.js
client-filestorage/src/views/: Files.vue  Header.vue  Login.vue  Register.vue
client-filestorage/src/views/auth/: Login.vue  Register.vue
